@@ -1,3 +1,7 @@
+SimpleComplex/Utils 1.x, 2018-05-29
+-----------------------------------
+- Time class renamed; from DateTimeSimple.
+
 SimpleComplex/Utils 1.x, 2018-05-27
 -----------------------------------
 - DateTimeSimple override \DateTime::setTime() to support (though ignore)
